src/objects/Case_Configuration_Task__c.object
<CustomObject>
    <fields>
        <fullName>Case_Configuration__c</fullName>
        <label>Case Configuration</label>
        <referenceTo>Case_Configuration__c</referenceTo>
        <relationshipLabel>Case Configuration Tasks</relationshipLabel>
        <relationshipName>Case_Configuration_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Statuses__c</fullName>
        <label>Statuses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Triggered</fullName>
                </value>
                <value>
                    <fullName>Errored</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <label>Task Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Detail__c</fullName>
        <label>Task Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Subject__c</fullName>
        <label>Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_for__c</fullName>
        <label>Task for</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case-Prep</fullName>
                </value>
                <value>
                    <fullName>Underwriter</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Configuration Task</label>
    <nameField>
        <displayFormat>CCT-{00000}</displayFormat>
        <label>Case Configuration Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Configuration Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>